--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -22,11 +22,22 @@ html {
 
 body {
   background-color: #f6eae3;
+  overflow-x: clip;
+  position: relative;
+}
+body::before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
   background-image: url("../img/bg.webp");
   background-repeat: repeat-y;
   background-size: 1620px 759px;
-  background-blend-mode: soft-light;
-  overflow-x: clip;
+  mix-blend-mode: multiply;
+  opacity: 0.05;
 }
 
 .container {
@@ -526,9 +537,11 @@ h3 {
   outline: none;
 }
 .form .form__label input::-moz-placeholder {
+  color: var(--brown-dark);
   opacity: 0.75;
 }
 .form .form__label input::placeholder {
+  color: var(--brown-dark);
   opacity: 0.75;
 }
 .form #open_checkbox {
@@ -638,7 +651,7 @@ h3 {
 }
 
 footer {
-  margin-bottom: 76px;
+  padding-bottom: 76px;
 }
 footer h2 {
   text-align: center;
@@ -910,7 +923,7 @@ footer a {
     border: solid 3px var(--brown-dark);
   }
   footer {
-    margin-bottom: 480px;
+    padding-bottom: 480px;
   }
   footer h2 {
     margin-bottom: 90px;
