--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -23,11 +23,23 @@ html {
 
 body {
     background-color: #f6eae3;
-    background-image: url('../img/bg.webp');
-    background-repeat: repeat-y;
-    background-size: 1620px 759px;
-    background-blend-mode: soft-light;
     overflow-x: clip;
+    position: relative;
+    &::before {
+        content: '';
+        display: block;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url('../img/bg.webp');
+        background-repeat: repeat-y;
+        background-size: 1620px 759px;
+
+        mix-blend-mode: multiply;
+        opacity: 0.05;
+    }
 }
 
 .container {
@@ -553,6 +565,7 @@ h3 {
             border-bottom: solid 1px var(--brown-dark);
             outline: none;
             &::placeholder {
+                color: var(--brown-dark);
                 opacity: 0.75;
             }
         }
@@ -676,7 +689,7 @@ h3 {
 }
 
 footer {
-    margin-bottom: 76px;
+    padding-bottom: 76px;
     h2 {
         text-align: center;
         margin-bottom: 30px;
@@ -1004,7 +1017,7 @@ footer {
     }
 
     footer {
-        margin-bottom: 480px;
+        padding-bottom: 480px;
         h2 {
             margin-bottom: 90px;
         }
