--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -316,7 +316,7 @@ h3 {
 }
 
 .invite {
-    margin-top: 54px;
+    margin-top: 254px;
     margin-bottom: 280px;
     position: relative;
     h2 {
@@ -483,6 +483,11 @@ h3 {
 .wish {
     margin-bottom: 277px;
     position: relative;
+
+    .container {
+        position: relative;
+        z-index: 20;
+    }
 
     h2 {
         margin-bottom: 51px;
